вернул flex-wrap: column

--- a/src/app/components/fruit-list/fruit-list.component.css
+++ b/src/app/components/fruit-list/fruit-list.component.css
@@ -1,7 +1,6 @@
 .fruit-list__items {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .fruit-list__item {
